# godotopus

./: .gitignore  README.md  SConstruct
demo/: Main.tscn  gdextension.gdextension  project.godot
src/: audio_stream_opus.cpp  audio_stream_opus.h  audio_stream_player_opus.cpp  audio_stream_player_opus.h  example.cpp  example.h  register_types.cpp  register_types.h  util.cpp  util.h  values.h
test/: CMakeLists.txt  test.cpp
